--- a/bio.html
+++ b/bio.html
@@ -15,9 +15,9 @@
 <meta property="og:type" content="website">
 <meta itemprop="name" content="Home">
 <meta itemprop="url" content="http://ashutoshpattnaik.github.io/">
-<link rel="stylesheet" type="text/css" href="./assets/css">
+<link rel="stylesheet" type="text/css" href="./assets1/css">
 
-<!--[if !IE]> --><link rel="stylesheet" type="text/css" href="./assets/site.css"><!-- <![endif]-->
+<!--[if !IE]> --><link rel="stylesheet" type="text/css" href="./assets1/site.css"><!-- <![endif]-->
 <style type="text/css">
   body, p, nav li, li {
     font-size: 18px !important;
@@ -41,7 +41,7 @@ font-size: 1.5em;
 line-height: 1.7em;
 }
 </style>
-  <script src="./assets/site-bundle.js.download" type="text/javascript"></script>
+  <script src="./assets1/site-bundle.js.download" type="text/javascript"></script>
 </head>
 
 <body class="page-borders-thick canvas-style-normal  header-subtitle-address banner-alignment-center blog-layout-center project-layout-left-sidebar thumbnails-on-open-page-show-all social-icon-style-round    hide-page-title   hide-article-author    event-thumbnails event-thumbnail-size-32-standard event-date-label event-date-label-time event-list-show-cats event-list-date event-list-time event-list-address   event-icalgcal-links  event-excerpts  event-item-back-link    product-list-titles-under product-list-alignment-center product-item-size-32-standard product-image-auto-crop product-gallery-size-11-square product-gallery-auto-crop show-product-price show-product-item-nav product-social-sharing newsletter-style-dark  opentable-style-light small-button-style-solid small-button-shape-square medium-button-style-solid medium-button-shape-square large-button-style-solid large-button-shape-square image-block-poster-text-alignment-center image-block-card-dynamic-font-sizing image-block-card-content-position-center image-block-card-text-alignment-left image-block-overlap-dynamic-font-sizing image-block-overlap-content-position-center image-block-overlap-text-alignment-left image-block-collage-dynamic-font-sizing image-block-collage-content-position-top image-block-collage-text-alignment-left image-block-stack-dynamic-font-sizing image-block-stack-text-alignment-left button-style-outline button-corner-style-square tweak-product-quick-view-button-style-floating tweak-product-quick-view-button-position-bottom tweak-product-quick-view-lightbox-excerpt-display-truncate tweak-product-quick-view-lightbox-show-arrows tweak-product-quick-view-lightbox-show-close-button tweak-product-quick-view-lightbox-controls-weight-light native-currency-code-usd  collection-type-page collection-layout-default homepage mobile-style-available site-title">
