--- a/bio.html
+++ b/bio.html
@@ -57,7 +57,7 @@ line-height: 1.7em;
       <div class="wrapper">
         <nav class="main-nav mobileNav"><ul>
         <li class="page-collection ">
-              <a href="index1.html">Home</a>
+              <a href="index.html">Home</a>
         </li>
         <li class="page-collection">
               <a href="publications.html">Publications</a>
@@ -95,7 +95,7 @@ line-height: 1.7em;
   <nav class="main-nav" data-content-field="navigation">
     <ul>
           <li class="page-collection">
-                <a href="index1.html">Home</a>
+                <a href="index.html">Home</a>
           </li>
 		  <li class="page-collection">
                 <a href="publications.html">Publications</a>
