--- a/bio.html
+++ b/bio.html
@@ -4,6 +4,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
   
+  <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
+
 <!--<base href="">--><base href=".">
 
 <title> Ashutosh Pattnaik</title>
