--- a/bio.html
+++ b/bio.html
@@ -175,7 +175,7 @@ function myFunction() {
       <!-- // CATEGORY NAV -->
 <!-- </div> -->
 
-<a href="ashutoshCV.pdf" target="_blank"><h2>Curriculum Vitae <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"></a></h2> 
+<a href="AshutoshPattnaik-Public.pdf" target="_blank"><h2>Curriculum Vitae <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"></a></h2> 
 
 <div class="inner">
 		<h2>ACADEMIC BACKGROUND</h2>
