--- a/bio.html
+++ b/bio.html
@@ -171,19 +171,36 @@ function myFunction() {
 <a href="AshutoshPattnaik-Public.pdf" target="_blank"><h2>Curriculum Vitae <img width=32 src="images/pdf-icon.png" style="vertical-align:middle;"></a></h2> 
 
 <div class="inner">
+		<h2>WORK EXPERIENCE</h2>
+<table>
+	<tr><td style="text-align: left">
+			<a class="image"><img src="images/armlogo.jpg" alt="" data-position="center center"  width="130px" /></a>
+		</td>
+		<td style="text-align: left">
+			Senior GPU Architect </b><br> <a href="https://www.arm.com" target="_blank">Arm, Austin, TX</a>
+		</td>
+		<td style="text-align: left" align='left'>
+			September 2019 - Present<br />
+		</td>
+		</tr>
+</table>
+
+<br>
+<div class="inner">
 		<h2>ACADEMIC BACKGROUND</h2>
 		<table>
-			<tr><td style="vertical-align:top;">
+			<tr><td style="vertical-align:top;padding-bottom: 10px">
 				<a class="image"><img src="images/psuseal.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
 			</td>
-			<td style="vertical-align:middle;">
-				<b>Ph.D. Candidate in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a></b><br> <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br>August 2013 - Present
+			<td style="vertical-align:middle;padding-bottom: 10px;padding-left: 10px">
+				<b>Ph.D. in <a href="http://www.cse.psu.edu/" target="_blank">Computer Science and Engineering</a></b><br> <a href="http://www.psu.edu/" target="_blank">The Pennsylvania State University</a><br>August 2013 - December 2019 (Defended August 2019) <br>
+				Thesis: <a href="https://etda.libraries.psu.edu/files/final_submissions/20328" target="_blank">Be(-A)ware of Data Movement: Optimizing Throughput Processors for Efficient Computations</a> 
 			</td>
 		</tr>
-		<tr><td style="vertical-align:top;">
+		<tr><td style="vertical-align:top;padding-bottom: 10px;">
 			<a class="image"><img src="images/nitrkl.png" alt="" data-position="center center"  width="120px" height="120px"/></a>
 		</td>
-		<td style="vertical-align:middle;">
+		<td style="vertical-align:middle;padding-bottom: 10px;padding-left: 10px">
 			<p><b>B. Tech. in <a href="http://nitrkl.ac.in/Academic/1Department/Home.aspx?hrtuery765hd=OA==-GS5YNjRcEt0=" target="_blank">Electronics and Instrumentation Engineering</a></b><br><a href="http://www.nitrkl.ac.in/" target="_blank">National Institute of Technology (NIT), Rourkela</a> <br>
 				August 2009 - May 2013<br>
 				Thesis: <a href="http://ethesis.nitrkl.ac.in/5283/1/109EI0297.pdf" target="_blank">Robotic Arm Control Through Human Arm Movement using Accelerometers</a> 
@@ -204,7 +221,7 @@ function myFunction() {
 				Pennsylvania State University
 			</td>
 			<td style="vertical-align:middle;padding-bottom: 10px">
-				August 2013 - Present<br>
+				August 2013 - August 2019<br>
 			</td>
 			<tr><td style="vertical-align:middle;padding-bottom: 10px">
 				<a class="image"><img src="images/amd-research.png" alt="" data-position="center center"  width="120px"/></a>
